Modificari pe SEO

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                         <input type="tel" id="phone" placeholder="Phone" required>
                     </div>
                     <div class="form-group">
+                        <label for="service">Select Service</label>
                         <select id="service" required>
                             <option value="">Select Service</option>
                             <option value="diagnostic">Diagnostic</option>
@@ -297,9 +298,9 @@
             <div class="footer-social">
                 <h3>Urmărește-ne</h3>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#" aria-label="Follow us on Facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="#" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="Subscribe to our YouTube channel"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
