--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axe-core/4.3.5/axe.min.js"></script>
     <meta name="description" content="Elite Auto Service oferă servicii auto profesionale, inclusiv diagnoză computerizată, schimb de ulei și reparații generale.">
     <meta name="keywords" content="service auto, diagnoză auto, schimb ulei, reparații auto, Elite Auto Service">
 </head>
