--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <meta name="description" content="Elite Auto Service oferă servicii auto profesionale, inclusiv diagnoză computerizată, schimb de ulei și reparații generale.">
     <meta name="keywords" content="service auto, diagnoză auto, schimb ulei, reparații auto, Elite Auto Service">
     <link rel="preload" href="https://images.unsplash.com/photo-1625047509168-a7026ade842b" as="image">
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
-<body>
+<body class="hidden">
+    <div class="loading-screen">Loading...</div>
     <nav class="navbar">
         <div class="nav-brand">
             <span class="logo">🔧</span>
