--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" media="print" onload="this.media='all'">
+    <script>
+        // Defer loading of Font Awesome CSS
+        document.addEventListener("DOMContentLoaded", function() {
+            const link = document.createElement("link");
+            link.rel = "stylesheet";
+            link.href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css";
+            document.head.appendChild(link);
+        });
+    </script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axe-core/4.3.5/axe.min.js" defer></script>
     <meta name="description" content="Elite Auto Service oferă servicii auto profesionale, inclusiv diagnoză computerizată, schimb de ulei și reparații generale.">
