Modificari SEO blea

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         .hidden {
             display: none;
         }
+        /* Stiluri critice pentru a îmbunătăți LCP */
+        .hero {
+            height: 100vh;
+            background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
+                        url('https://images.unsplash.com/photo-1625047509168-a7026ade842b') center/cover;
+        }
     </style>
 </head>
 <body class="hidden">
