--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="hero-features">
             <div class="feature">
                 <i class="fas fa-tools"></i>
-                <h2>Echipamente Moderne</h2>
+                <h2>Echipamente</h2>
             </div>
             <div class="feature">
                 <i class="fas fa-user-tie"></i>
