--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             height: 100vh;
             background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
                         url('https://images.unsplash.com/photo-1625047509168-a7026ade842b') center/cover;
+            background-image: url('https://images.unsplash.com/photo-1625047509168-a7026ade842b');
         }
     </style>
 </head>
-<body class="hidden">
+<body>
     <div class="loading-screen">Loading...</div>
     <nav class="navbar">
         <div class="nav-brand">
