--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
     </style>
 </head>
-<body>
+<body class="hidden">
     <div class="loading-screen">Loading...</div>
     <nav class="navbar">
         <div class="nav-brand">
