--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Service Auto Profesional</h1>
+            <h1>Service Auto</h1>
             <p>Specialiști în reparații auto și întreținere</p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn btn-primary">Programează-te</a>
