Add photo gallery

--- a/index.html
+++ b/index.html
@@ -150,6 +150,30 @@
         </div>
     </section>
 
+    <section id="gallery" class="gallery">
+        <h2 class="section-title">Galeria Noastră</h2>
+        
+        <div class="gallery-filters">
+            <button class="filter-btn active" data-filter="all">Toate</button>
+            <button class="filter-btn" data-filter="repairs">Reparații</button>
+            <button class="filter-btn" data-filter="diagnostic">Diagnostic</button>
+            <button class="filter-btn" data-filter="maintenance">Întreținere</button>
+        </div>
+
+        <div class="gallery-grid">
+            <!-- Imaginile vor fi adăugate dinamic prin JavaScript -->
+        </div>
+
+        <!-- Lightbox Modal -->
+        <div class="lightbox" id="lightbox">
+            <span class="lightbox-close">&times;</span>
+            <img class="lightbox-image" src="" alt="Imagine Galerie">
+            <div class="lightbox-caption"></div>
+            <button class="lightbox-prev">&lt;</button>
+            <button class="lightbox-next">&gt;</button>
+        </div>
+    </section>
+
     <section class="faq-section">
         <h2 class="section-title">Întrebări Frecvente</h2>
         <div class="faq-container">
