--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <title>Elite Auto Service</title>
-    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <script>
         // Defer loading of Font Awesome CSS
         document.addEventListener("DOMContentLoaded", function() {
@@ -22,6 +22,13 @@
     <meta name="keywords" content="service auto, diagnoză auto, schimb ulei, reparații auto, Elite Auto Service">
     <link rel="preload" href="https://images.unsplash.com/photo-1625047509168-a7026ade842b" as="image">
     <style>
+        body {
+            opacity: 0;
+            visibility: hidden;
+        }
+    </style>
+    <!-- Ștergeți sau comentați acest bloc din head -->
+    <!-- <style>
         .hidden {
             display: none;
         }
@@ -32,7 +39,7 @@
                         url('https://images.unsplash.com/photo-1625047509168-a7026ade842b') center/cover;
             background-image: url('https://images.unsplash.com/photo-1625047509168-a7026ade842b');
         }
-    </style>
+    </style> -->
 </head>
 <body class="hidden">
     <div class="loading-screen">Loading...</div>
