--- a/index.html
+++ b/index.html
@@ -296,19 +296,19 @@
                         <input type="tel" id="phone" placeholder="Phone" required>
                     </div>
                     <div class="form-group">
-                        <label for="service">Select Service</label>
+                        <label for="service">Selectează Serviciul</label>
                         <select id="service" required>
-                            <option value="">Select Service</option>
-                            <option value="diagnostic">Diagnostic</option>
-                            <option value="oil">Oil Change</option>
-                            <option value="electric">Electrical System</option>
-                            <option value="mechanical">General Mechanics</option>
+                            <option value="">Selectează Serviciul</option>
+                            <option value="diagnostic">Diagnostică</option>
+                            <option value="oil">Schimb ulei</option>
+                            <option value="electric">Sistem electric</option>
+                            <option value="mechanical">Mecanică generală</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <textarea id="message" placeholder="Message" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
+                    <button type="submit" class="btn btn-primary">Trimite</button>
                 </form>
             </div>
         </div>
