--- a/index.html
+++ b/index.html
@@ -387,10 +387,11 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Elite Auto Service. Toate drepturile rezervate.</p>
+            <p>&copy; <span id="spanYear"></span> Elite Auto Service. Toate drepturile rezervate.</p>
         </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="script.js" defer></script>
 </body>
 </html> 
