--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; <span id="spanYear"></span> Elite Auto Service. Toate drepturile rezervate.</p>
+            <p>&copy; <span id="spanYear"></span> Elite Auto Service. Toate drepturile rezervate. Susținut de <a href="https://www.dotteam.md" target="_blank" rel="noopener noreferrer">DOT</a>.</p>
         </div>
     </footer>
 
